traces/bug_539.txt
src/bamglib/MeshGeom.cpp:719: error: DEAD_STORE
  The value written to &i (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/MeshGeom.cpp:719:8: Write of unused value
717.          //	    << Number(eg1) << " " << (Real8) vg1 << V0 << V1 << "  Interpol = " 
718.          // << V0*(1-s)+V1*s << ";;; " <<  endl;
719.          int i=bge;
              ^
720.          Real8 ll=0;
721.          for(i=bge;i<tge;i++) 
